--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,16 +1,43 @@
-<div class="container">
-  <h1><%= @user.username.capitalize + ", " %><%= @user.age %></h1><br>
-  <div class="row">
-    <div class="col-3">
-      <%= image_tag(@user.avatar, class: "img-fluid img-thumbnail rounded float-start", alt: "An example image", style: "max-width: 300px;") %>
+<h1><%= @user.username.capitalize + ", " %><%= @user.age %></h1>
+
+<div class="row">
+  <div class="col">
+    <div class="card mx-auto mb-3" style="width: 25rem;">
+      <%= image_tag(@user.avatar, class: "img-fluid img-thumbnail rounded float-start", alt: "Profile image", style: "max-width: 500px;") %>
     </div>
-    <div class="col">
+  </div>
 
+  <div class="col">
 
-      <h3><%= @user.country + ", " %><%= @user.state + ", " %><%= @user.city%></h3>
-      <h4>Bio:</h4><%= @user.bio %><br>
-      <%= link_to "Return Back", request.referer, class: "btn btn-primary mt-4" %>
+    <div class="card mx-auto mb-3" style="width: 35rem;">
+      <div class="card-header">
+        Location
+      </div>
+      <div class="card-body">
+        <h3><%= @user.country + ", " %><%= @user.state + ", " %><%= @user.city %></h3>
+      </div>
+    </div>
 
+    <div class="card mx-auto mb-3" style="width: 35rem;">
+      <div class="card-header">
+        Bio
+      </div>
+      <div class="card-body">
+        <p><%= @user.bio %></p>
+      </div>
+    </div>
+    <div class="card mx-auto mb-3" style="width: 35rem;">
+      <button type="button" class="btn btn-outline-success mb-1 col-6 d-md-block mt-3 mx-auto">Message</button>
+      <button type="button" class="btn btn-outline-primary mb-1 col-6 d-md-block mx-auto">Add to favorites</button>
+      <button type="button" class="btn btn-outline-danger mb-1 col-6 d-md-block mx-auto">Block</button>
+      <%= link_to "Return Back", request.referer, class: "btn btn-outline-primary mb-3 mt-5 col-3 mx-auto d-md-block" %>
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
