--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -42,7 +42,7 @@
     </div>
 
     <div class="card mx-auto mb-3" style="width: 35rem;">
-      <a href="<%= edit_user_registration_path %>" data-turbo-method="delete" class="btn btn-outline-primary mb-1 col-6 d-md-block mt-3 mx-auto">
+      <a href="<%= edit_user_registration_path %>" class="btn btn-outline-primary mb-1 col-6 d-md-block mt-3 mx-auto">
         <i class="fa-solid fa-pen-to-square" style="color: #585555;"></i>&nbsp;Edit profile
       </a>
       <a href="<%= destroy_user_session_path %>" data-turbo-method="delete" class="btn btn-outline-primary mb-1 col-6 d-md-block mb-3 mx-auto">
