--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,6 +4,10 @@ h1 {
   font-family: 'Indie Flower', cursive;
 }
 
+h2 {
+  text-align: center;
+}
+
 h5 {
   font-family: 'Indie Flower', cursive;
 }
