--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,5 @@
 h1 {
-  margin-bottom: 25px;
+  margin-bottom: 40px;
   text-align: center;
   font-family: 'Indie Flower', cursive;
 }
@@ -53,6 +53,18 @@ h5 {
   font-family: "Tahoma", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1.2em;
   margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+.dropdown-menu {
+  border-radius: 10px;
+  background: linear-gradient(to left, lavenderblush, lavender);
+  opacity: 0.8;
+  margin-bottom: 5px;
+}
+
+.navbar-toggler {
+  border-radius: 70px;
 }
 
 body {
