--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -1,18 +1,17 @@
 <% provide(:title, "Home") %>
-<%= stylesheet_link_tag 'dashboard.css', media: 'all' %>
 
 <h1><%= "Hello, " + current_user.username.capitalize %></h1>
 
 <div class="row">
   <div class="col">
-    <div class="card mx-auto mb-3" style="width: 25rem;">
+    <div class="card mx-auto mb-3" style="max-width: 500px;">
       <%= image_tag(current_user.avatar, class: "img-fluid img-thumbnail rounded float-start", alt: "Profile image", style: "max-width: 500px;") %>
     </div>
   </div>
 
   <div class="col">
 
-    <div class="card mx-auto mb-3" style="width: 35rem;">
+    <div class="card mx-auto mb-3">
       <div class="card-header">
         Location
       </div>
@@ -21,7 +20,7 @@
       </div>
     </div>
 
-    <div class="card mx-auto mb-3" style="width: 35rem;">
+    <div class="card mx-auto mb-3">
       <div class="card-header">
         Bio
       </div>
@@ -30,7 +29,7 @@
       </div>
     </div>
 
-    <div class="card mx-auto mb-3" style="width: 35rem;">
+    <div class="card mx-auto mb-3">
       <div class="card-header">
         Info
       </div>
@@ -41,7 +40,7 @@
       </div>
     </div>
 
-    <div class="card mx-auto mb-3" style="width: 35rem;">
+    <div class="card mx-auto mb-3">
       <a href="<%= edit_user_registration_path %>" class="btn btn-outline-primary mb-1 col-6 d-md-block mt-3 mx-auto">
         <i class="fa-solid fa-pen-to-square" style="color: #585555;"></i>&nbsp;Edit profile
       </a>
