--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -90,6 +90,38 @@
           <hr class="mt-4">
 
           <div class="form-group">
+            <%= f.label :avatar, "Avatar" %>
+            <%= f.text_field :avatar, class: "form-control", :placeholder => "Enter URL of your picture" %>
+          </div>
+
+          <hr class="mt-4">
+
+          <div class="form-group">
+            <%= f.label :country, "Country" %>
+            <%= f.select :country, [['Select Country', nil], ['Country 1', 'Country 1'], ['Country 2', 'Country 2']], {}, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :state, "State" %>
+            <%= f.select :state, [['Select State', nil], ['State 1', 'State 1'], ['State 2', 'State 2']], {}, class: "form-control" %>
+          </div>
+
+
+          <div class="form-group">
+            <%= f.label :city, "City" %>
+            <%= f.select :city, [['Select City', nil], ['City 1', 'City 1'], ['City 2', 'City 2']], {}, class: "form-control" %>
+          </div>
+
+          <hr class="mt-4">
+
+          <div class="form-group">
+            <%= f.label :bio, "Bio" %>
+            <%= f.text_area :bio, class: "form-control", :placeholder => "This field is not required" %>
+          </div>
+
+          <hr class="mt-4">
+
+          <div class="form-group">
             <% password_was_invalid = resource.errors.include?(:password) %>
 
             <% password_class = "form-control" %>
