--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,14 +2,14 @@
 
 <div class="row">
   <div class="col">
-    <div class="card mx-auto mb-3" style="width: 25rem;">
+    <div class="card mx-auto mb-3" style="max-width: 500px">
       <%= image_tag(@user.avatar, class: "img-fluid img-thumbnail rounded float-start", alt: "Profile image", style: "max-width: 500px;") %>
     </div>
   </div>
 
   <div class="col">
 
-    <div class="card mx-auto mb-3" style="width: 35rem;">
+    <div class="card mx-auto mb-3">
       <div class="card-header">
         Location
       </div>
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <div class="card mx-auto mb-3" style="width: 35rem;">
+    <div class="card mx-auto mb-3">
       <div class="card-header">
         Bio
       </div>
@@ -26,7 +26,7 @@
         <p><%= @user.bio %></p>
       </div>
     </div>
-    <div class="card mx-auto mb-3" style="width: 35rem;">
+    <div class="card mx-auto mb-3">
       <button type="button" class="btn btn-outline-success mb-1 col-6 d-md-block mt-3 mx-auto">Message</button>
       <button type="button" class="btn btn-outline-primary mb-1 col-6 d-md-block mx-auto">Add to favorites</button>
       <button type="button" class="btn btn-outline-danger mb-1 col-6 d-md-block mx-auto">Block</button>
