--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -135,7 +135,7 @@
 
   <% end %>
     <% else %>
-  <h2>No results</h2>
+  <h2>No results on your search, please change the parameters</h2>
     <% end %>
 
   <%= will_paginate @profiles %>
