--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -81,3 +81,37 @@ body {
   background-color: #eef2ff;
 }
 
+@media only screen and (max-width: 600px) {
+  /* Styling the pagination container */
+  .pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+  }
+
+  /* Styling the individual pagination links */
+  .pagination a {
+    margin: 2px;
+    padding: 2px;
+    text-decoration: none;
+    background-color: #f0f0f0;
+    color: #333;
+    height: 30px;
+  }
+
+  /* Styling the currently active page link */
+  .pagination .current {
+    margin: 2px;
+    padding: 2px;
+    text-decoration: none;
+    background-color: cornflowerblue;
+    color: #fff;
+  }
+
+  /* Styling the "previous" and "next" links */
+  .pagination .previous, .pagination .next {
+    font-weight: bold;
+    margin: 1px;
+    padding: 1px;
+  }
+}
