fixed background in mobile view, installed stimulus

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -114,4 +114,9 @@ body {
     margin: 1px;
     padding: 1px;
   }
+
+  body {
+    background-image: url("background.jpg");
+    min-height: 100vh;
+  }
 }
