--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -3,7 +3,10 @@
 
 <p>Here all my chats</p>
 
+<% @chats.each do |chat| %>
+<%= chat.receiver.username %><hr>
 
+<% end %>
 <div class="dropdown">
   <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
     Dropdown link
