--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -14,8 +14,8 @@
 </article>
 
 <div id="buttons">
-  <%= link_to "Sign In", new_user_session_path, class: "btn btn-outline-success btn-lg", role: "button", "aria-pressed" => "true" %>&nbsp;
-  <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-outline-success btn-lg", role: "button", "aria-pressed" => "true" %>
+  <%= link_to "Sign In", new_user_session_path, class: "btn btn-outline-success btn-lg", id: "landing1", role: "button", "aria-pressed" => "true" %>&nbsp;
+  <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-outline-secondary btn-lg", id: "landing2",role: "button", "aria-pressed" => "true" %>
 
 </div>
 <article>
