--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
 
         <% form_html_options = { novalidate: true, class: "mb-3" } %>
 
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: form_html_options) do |f| %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { enctype: 'multipart/form-data' }.merge(form_html_options)) do |f| %>
           <div class="form-group">
             <% email_was_invalid = resource.errors.include?(:email) %>
 
@@ -52,7 +52,7 @@
 
           <div class="form-group">
             <%= f.label :avatar, "Avatar" %>
-            <%= f.text_field :avatar, class: "form-control", :placeholder => "Enter URL of your picture" %>
+            <%= f.file_field :avatar, class: "form-control", :placeholder => "Enter URL of your picture" %>
           </div>
 
           <hr>
