--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -52,7 +52,7 @@
 
           <div class="form-group">
             <%= f.label :avatar, "Avatar" %>
-            <%= f.text_field :avatar, class: "form-control", :placeholder => "Enter URL of your picture" %>
+            <%= f.file_field :avatar, class: "form-control", :placeholder => "Enter URL of your picture" %>
           </div>
 
           <hr>
