--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,14 +1,14 @@
+<% provide(:title, "Profiles") %>
+
 <h1><%= @user.username.capitalize + ", " %><%= @user.age %></h1>
 
 <div class="row">
   <div class="col">
     <div class="card mx-auto mb-3" style="max-width: 500px">
-      <%= image_tag(@user.avatar, class: "img-fluid img-thumbnail rounded float-start", alt: "Profile image", style: "max-width: 500px;") %>
+      <img src="<%= @user.avatar %>" alt="<%= @user.username.capitalize %>'s photo" class="img-fluid img-thumbnail rounded-start rounded-end" style="max-width: 500px;">
     </div>
   </div>
-
   <div class="col">
-
     <div class="card mx-auto mb-3">
       <div class="card-header">
         Location
@@ -17,7 +17,6 @@
         <h3><%= @user.country + ", " %><%= @user.state + ", " %><%= @user.city %></h3>
       </div>
     </div>
-
     <div class="card mx-auto mb-3">
       <div class="card-header">
         Bio
