changed button in profile, added dependency to messages and chats to user destroy and chat destroy

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -31,7 +31,7 @@
       </button>
       <button type="button" class="btn btn-outline-primary mb-1 col-6 d-md-block mx-auto">Add to favorites</button>
       <button type="button" class="btn btn-outline-danger mb-1 col-6 d-md-block mx-auto">Block</button>
-      <%= link_to "Return Back", request.referer, class: "btn btn-outline-primary mb-3 mt-5 col-3 mx-auto d-md-block" %>
+      <%= link_to "Back", request.referer, class: "btn btn-outline-primary mb-3 mt-5 col-3 mx-auto d-md-block" %>
     </div>
   </div>
 </div>
