--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -19,6 +19,11 @@ h2 {
   text-align: center;
 }
 
+h4 {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
 h5 {
   font-family: 'Indie Flower', cursive;
 }
