--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,16 +1,40 @@
 <% provide(:title, "Chats") %>
-<% content_for :h1, 'My chats' %>
-<ul class="list-group">
-  <% @chats.each do |chat| %>
-    <li class="list-group-item d-flex justify-content-between align-items-center col-6 mx-auto m-1 ">
-      <% if current_user.id == chat.receiver_id %>
-        <%= link_to chat.sender.username.capitalize, chat_path(chat), class: 'stretched-link' %>
-      <% else %>
-        <%= link_to chat.receiver.username.capitalize, chat_path(chat), class: 'stretched-link' %>
-      <% end %>
-    </li>
+<% content_for :h1, 'My Chats' %>
+<style>
+    .icon-link:hover i {
+        color: red;
+    }
+</style>
 
-  <% end %>
-</ul>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="list-group shadow-sm">
 
-<%= will_paginate @chats %>
+        <% @chats.each do |chat| %>
+          <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            <% chat_link = current_user.id == chat.receiver_id ? chat.sender : chat.receiver %>
+
+            <%= link_to chat_path(chat), class: 'd-flex align-items-center text-decoration-none' do %>
+              <%= image_tag chat_link.avatar.url, class: 'rounded-circle', width: 40, height: 40 %>
+              <span class="ms-2 text-dark"><%= chat_link.username.capitalize %></span>
+            <% end %>
+
+            <div>
+              <small class="text-muted me-3">Last message: <%= chat.last_message_date.strftime("%d %b %Y") %></small>
+              <%= link_to chat_path(chat), method: :delete, data: { confirm: 'Are you sure?' }, class: 'icon-link', title: 'Delete Chat' do %>
+                <i class="fa fa-times-circle text-danger"></i>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+      </div>
+      <div class="mt-3">
+        <%= will_paginate @chats %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
