--- a/app/views/layouts/custom.html.erb
+++ b/app/views/layouts/custom.html.erb
@@ -10,6 +10,8 @@
   <%= render partial: "shared/cdn_assets" %>
 
   <%= stylesheet_link_tag "custom", "data-turbo-track": "reload" %>
+  <%= javascript_include_tag 'application', 'data-turbo-track': 'reload' %>
+
   <%= javascript_importmap_tags %>
 </head>
 
