--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @message, local: true do |form| %>
+<%= form_with model: @message, data: { turbo_frame: "new_message" }, id: 'new_message_form' do |form| %>
   <% if @message.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@message.errors.count, "error") %> prohibited this message from being saved:</h2>
@@ -18,7 +18,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class: "btn btn-primary" %>
+    <%= form.submit "Send message", class: "btn btn-primary" %>
   </div>
 
 <% end %>
