--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,17 +1,23 @@
-<div id="<%= dom_id message %>">
-  <p>
-    <strong>Chat:</strong>
-    <%= message.chat_id %>
-  </p>
+<li id="message_<%= message.id %>" class="px-2">
+  <div class="d-flex align-items-start">
+    <%= link_to image_tag(message.author.avatar.url, class: 'rounded-circle mt-1', width: 40, height: 40), "/profiles/#{message.author.id}" %>
+    <div class="flex-grow-1 ms-2">
+      <%= link_to message.author.username.capitalize, "/profiles/#{message.author.id}", class: 'text-muted', style: 'text-decoration: none;' %>
+      <span class="text-muted"><%= message.created_at.strftime("%-d %b %Y") %></span>
+      <div class="rounded px-2 py-1" style="background-color: lavender; word-wrap: break-word;">
+        <p class="mb-1" style="word-break: break-word;"><%= message.content %></p>
+      </div>
+    </div>
 
-  <p>
-    <strong>Author:</strong>
-    <%= message.author_id %>
-  </p>
+    <% if message.author_id == current_user.id %>
+      <%= link_to message_path(message),
+                  method: :delete,
+                  data: { turbo_method: :delete },
+                  class: 'btn btn-danger btn-sm',
+                  title: 'Delete Message' do %>
+        <i class="fa fa-trash"></i>
+      <% end %>
+    <% end %>
 
-  <p>
-    <strong>Content:</strong>
-    <%= message.content %>
-  </p>
-
-</div>
+  </div>
+</li>
